--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,11 @@ extend-ignore = [
 ]
 pydocstyle.convention = "google"
 
+[tool.ruff.lint.per-file-ignores]
+"src/cogs/*" = [
+    "INP001" # implicit-namespace-package else pycord thinks __init__.py is an extension
+]
+
 [tool.basedpyright]
 include = ["src"]
 exclude = ["**/node_modules",
