:wrench: Enable lock file maintenance and semantic commits in Renovate configuration.

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,10 @@
   "extends": ["config:recommended"],
   "separateMultipleMajor": true,
   "additionalBranchPrefix": "{{parentDir}}-",
-  "pinDigests": true
+  "pinDigests": true,
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "semanticCommits": "enabled",
+  "addLabels": ["renovate", "dependencies"]
 }
