--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,5 +45,5 @@ exclude = ["**/node_modules",
     ".venv"
 ]
 pythonVersion = "3.13"
-pythonPlatform = "any"
+pythonPlatform = "All"
 typeCheckingMode = "basic"
