:wrench: Add step to sync dependencies in autofix workflow

--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           enable-cache: "auto"
 
+      - name: Sync dependencies
+        run: uv sync
+
       - name: Format code
         run: |
           set +e
