--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Versa is a Discord user app (bot) aimed to provide helpful utilit
 readme = "README.md"
 requires-python = ">=3.13,<3.14"
 dependencies = [
+    "pillow>=12.1.0",
     "py-cord>=2.7.0",
     "python-dotenv>=1.2.1",
 ]
@@ -37,7 +38,7 @@ extend-ignore = [
     "D10", # missing docstrings is overkill
     "T201" # print used # TODO: Switch to only using logging.*
 ]
-pydocstyle.convention = "google"
+pydocstyle.convention = "numpy"
 
 [tool.ruff.lint.per-file-ignores]
 "src/cogs/*" = [
