:construction_worker: Add workflow to build and push Docker images

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,3 +13,10 @@ concurrency:
 jobs:
   quality:
     uses: ./.github/workflows/quality.yml
+  docker:
+    needs: quality
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+    uses: ./.github/workflows/docker.yml
