--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,6 +12,8 @@ concurrency:
 
 jobs:
   quality:
+    permissions:
+      contents: read
     uses: ./.github/workflows/quality.yml
   docker:
     needs: quality
@@ -21,6 +23,7 @@ jobs:
       id-token: write
     uses: ./.github/workflows/docker.yml
   deploy:
+    permissions: {}
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     needs: docker
     uses: ./.github/workflows/deploy.yml
