feat(CD): 👷 Continuous delivery (#27)
* :construction_worker: Add Dockerfile and Compose configuration for containerized setup

* :construction_worker: Add workflow to build and push Docker images

* :construction_worker: Add deployment workflow for Coolify integration

* :construction_worker: Set explicit permissions for GitHub workflows

* :green_heart: Fix Coolify deployment workflow

* :construction_worker: Update permissions for GitHub workflows

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,4 +12,21 @@ concurrency:
 
 jobs:
   quality:
+    permissions:
+      contents: read
     uses: ./.github/workflows/quality.yml
+  docker:
+    needs: quality
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
+    uses: ./.github/workflows/docker.yml
+  deploy:
+    permissions: {}
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: docker
+    uses: ./.github/workflows/deploy.yml
+    secrets:
+      COOLIFY_WEBHOOK: ${{ secrets.COOLIFY_WEBHOOK }}
+      COOLIFY_TOKEN: ${{ secrets.COOLIFY_TOKEN }}
