--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,18 +1,16 @@
 name: CD
 
 on:
-  workflow_run:
-    workflows: [ "CI" ]
-    types:
-      - completed
-    branches:
-      - main
+  push:
+    branches: [ "main" ]
 
 concurrency:
   group: deploy-${{ github.event.workflow_run.head_branch || 'main' }}
   cancel-in-progress: true
 
 jobs:
+  CI:
+    uses: ./.github/workflows/CI.yml
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     permissions: {}
