Final polishing touches

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
     steps:
     - name: Deploy
       run: |
-       curl --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
+       curl --fail-with-body --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
