--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,7 +10,7 @@ permissions:
   id-token: write
 
 concurrency:
-  group: deploy-${{ github.ref_name || 'main' }}
+  group: deploy-${{ github.ref_name }}
   cancel-in-progress: true
 
 jobs:
